pdl-intellij-plugin/src/test/resources/annotator/fixtures/UnresolvedImport.pdl
import <error descr="Cannot resolve import 'org.example.Unresolved'">org.example.Unresolved</error>

record UnresolvedImport {
}